--- a/template/accounts/my_orders.html
+++ b/template/accounts/my_orders.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
 
-<!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y bg">
 
     {% include 'includes/alerts.html' %}
-
     <div class="container">
         <div class="row">
-        {% include 'includes/dashboard_sidebar.html' %}
+       {% include 'includes/dashboard_sidebar.html' %}
         <main class="col-md-9">
             <article class="card">
             <header class="card-header">
                 <strong class="d-inline-block mr-3">Your Order History</strong>
+                
             </header>
             <div class="card-body">
-                <div class="row">
+                <div class="row"> 
                     <div class="col-md-12">
                         <table class="table table-hover">
                             <thead>
@@ -29,22 +29,23 @@
                               </tr>
                             </thead>
                             <tbody>
-                                {% for order in order %}
-                                <tr>
-                                    <th scope="row"><a href="{% url 'order_detail' order.order_number %}">{{order.order_number}}</a></th>
-                                    <td>{{order.full_name}}</td>
-                                    <td>{{order.phone}}</td>
-                                    <td>${{order.order_total}}</td>
-                                    <td>{{order.created_at}}</td>
-                                </tr>
-                            {% endfor %}  
+                                {% for order in orders %}
+                                   <tr>
+                                     <th scope="row"><a href="{% url 'order_detail' order.order_number %}">{{order.order_number}}</a></th>
+                                     <td>{{order.full_name}}</td>
+                                     <td>{{order.phone}}</td>
+                                     <td>${{order.order_total}}</td>
+                                     <td>{{order.created_at}}</td>
+                                   </tr>
+                                {% endfor %}      
+
                             </tbody>
                           </table>
                     </div>
 
-                </div>
                 </div> <!-- row.// -->
             </div> <!-- card-body .// -->
+
             </article> <!-- order-group.// --> 
         </main>
     </div> <!-- row.// -->
@@ -52,9 +53,5 @@
     
     
     </section>
-    <!-- ========================= SECTION CONTENT END// ========================= -->
-    
-    
-
 
 {% endblock %}
