--- a/template/home.html
+++ b/template/home.html
@@ -11,7 +11,7 @@
 <!-- Intro with Text Center -->
 
 
-<section class="section-intro padding-y-sm">
+<!-- <section class="section-intro padding-y-sm">
 <div class="container">
 
 <div class="intro-banner-wrap">
@@ -19,6 +19,31 @@
 </div>
 
 </div>
+</section> -->
+
+
+<section>
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img class="d-block " style="width: 100%;height: 450px;" src="{% static 'images/banners/b1.jpg' %}" alt="First slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block " style="width: 100%;height: 450px;" src="{% static 'images/banners/b2.jpg' %}" alt="Second slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block " style="width: 100%;height: 450px;" src="{% static 'images/banners/ban.jpg' %}" alt="Third slide">
+		  </div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Next</span>
+		</a>
+	  </div>
 </section>
 <!-- ========================= SECTION MAIN END// ========================= -->
 
