--- a/template/store/checkout.html
+++ b/template/store/checkout.html
@@ -62,12 +62,16 @@
                     <label for="">Country</label>
                     <input type="text" name="country" class="form-control" required>
                 </div>
+                <div class="col form-group">
+                    <label for="">Pincode</label>
+                    <input type="text" name="pincode" class="form-control" required>
+                </div>
                 </div>
                 <div class-form-now>
                     <label for="">Order Note</label>
                     <textarea name="order_note" rows="2" class="form-conrole"></textarea>
                 </div>
-        </form>
+        
     </div>
 </div> <!-- card.// -->
 
@@ -121,7 +125,7 @@
                 </tbody>
                 </table>
                 <button type='submit' class="btn btn-dark btn-block">Place Order</button>
-			<a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+			    <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
         </form>
 		</div> <!-- card-body.// -->
 		</div> <!-- card.// -->
