--- a/template/accounts/dashboard.html
+++ b/template/accounts/dashboard.html
@@ -28,6 +28,7 @@
                             </div>
                         </div>
                     </div>
+                    {% if userprofile.profile_picture %}
                     <div class="col-md-6">
                         <div class="card" style="text-align:center;">
                             <div class="card-body">
@@ -37,6 +38,7 @@
                             </div>
                         </div>
                     </div>
+                    {% endif %}
 
                 </div>
                 </div> <!-- row.// -->
