--- a/template/accounts/order_detail.html
+++ b/template/accounts/order_detail.html
@@ -42,7 +42,7 @@
                                         <li><strong>Order</strong> #{{order.order_number}}</li>
                                         <li><strong>Transaction</strong> #{{order.payment.payment_id}}</li>
                                         <li><strong>Order Date:</strong>{{order.created_at}}</li>
-                                        <li><strong>Status:</strong>{{order.payment..status}}</li>
+                                        <li><strong>Status:</strong>{{order.status}}</li>
                                     </ul>
                                 </div>
                             </div>
@@ -59,19 +59,19 @@
                                         </thead>
                                         <tbody>
                                             {% for item in order_detail %}
-                                            <tr>
-                                                <td>{{order_product.product}}
+                                              <tr>
+                                                  <td>{{item.product.product_name}}
                                                     <p class="text-muted small">
-                                                          {% if order_product.variation.all %}
-                                                              {% for item in order_product.variation.all %}
-                                                                 {{ item.variation_category | capfirst }} : {{item.variation_value | capfirst }}
-                                                              {% endfor %}
-                                                          {% endif %}
-                                                      </p>
-                                                  </td> 
-                                                <td class="text-center">{{order_product.quantity}}</td>
-                                                <td class="text-center">₹ {{order_product.product_price}}</td>
-                                            </tr>
+                                                        {% if item.variations.all %}
+                                                          {% for i in item.variations.all %}
+                                                             {{ i.variation_catagory | capfirst }} : {{ i.variation_value | capfirst }}  <br>
+                                                          {% endfor %}
+                                                        {% endif %}  
+                                                    </p>
+                                                  </td>
+                                                  <td class="text-center">{{item.quantity}}</td>
+                                                  <td class="text-center">₹{{item.product.price}}</td>
+                                              </tr>
                                             {% endfor %}
                                         </tbody>
                                         <tfoot>
@@ -81,12 +81,12 @@
                                             </tr>
                                             <tr>
                                                 <th colspan="2" class="text-right">Tax:</th>
-                                                <th class="text-center">₹ {{tax}}</th>
+                                                <th class="text-center">₹ {{order.tax}}</th>
                                             </tr>
                                             
                                             <tr>
                                                 <th colspan="2" class="text-right">Grand Total:</th>
-                                                <th class="text-center">₹ {{grand_total}}</th>
+                                                <th class="text-center">₹ {{order.order_total}}</th>
                                             </tr>
                                         </tfoot>
                                     </table>
@@ -103,8 +103,11 @@
             </div>
             <!-- End .panel --> 
         </div>
+        
+        {% if order.status == 'Pending' or order.status == 'Accepted' %}
+        <a href="{% url 'user_cancel_order' order.order_number %}" onclick="return confirm('Are you sure want to cancel this order?')" class="btn btn-sm btn-danger">Cancel Order</a>
+        {% endif %}
         <!-- col-lg-12 end here -->
     </div>
     </div>
-
 {% endblock content %}
