--- a/template/store/product_detail.html
+++ b/template/store/product_detail.html
@@ -20,12 +20,12 @@
             <main class="col-md-6 border-left">
               <form action="{% url 'add_cart' single_product.id %}" method="POST">
                 {% csrf_token %}
-                <article class="content-body">
+                <article class="content-body ml-3">
                 
                 <h2 class="title">{{ single_product.product_name }}</h2>
                 
                 <div class="mb-3">  
-                    <var class="price h4">Rs. {{single_product.price }}</var> 
+                    <var class="price h4">₹ {{single_product.price }}</var> 
                 </div> 
                 
                 <p>{{ single_product.description }}</p>
@@ -34,7 +34,7 @@
                 <hr>
                     <div class="row">
                         <div class="item-option-select">
-                            <h6>Choose Color</h6>
+                            <h6 class="text-info">Choose Color</h6>
                               <select name="color" class="form-control w-25" required>
                                 <option value="" disabled selected>Choose Color</option>
                                 {% for i in single_product.variation_set.colors %}
@@ -64,7 +64,7 @@
                     {% if single_product.stock <= 0 %}
                     <h5 class="text-danger">Out of Stock</h5> 
                       {% else %}
-                      <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+                      <button type="submit" class="btn  btn-info"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
                       {% endif %}
                 </article> <!-- product-info-aside .// -->
               </form>
@@ -79,27 +79,27 @@
                 <div class="col-md-9">
     
         <header class="section-heading">
-            <h3>Customer Reviews </h3>  
+            <!-- <h3>Customer Reviews </h3>   -->
             
         </header>
     
-        <article class="box mb-3">
+        <!-- <article class="box mb-3">
             <div class="icontext w-100">
                 <img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
                 <div class="text">
                     <span class="date text-muted float-md-right">24.04.2020 </span>  
                     <h6 class="mb-1">Mike John </h6>
                     
-                </div>
-            </div> <!-- icontext.// -->
-            <div class="mt-3">
+                </div> -->
+            <!-- </div> icontext.// -->
+            <!-- <div class="mt-3">
                 <p>
                     Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip
                 </p>	
             </div>
-        </article>
+        </article> -->
     
         
     
