--- a/template/manager/admin_orders.html
+++ b/template/manager/admin_orders.html
@@ -41,9 +41,9 @@
               <td>{{ order.phone_number }}</td>
               <td>₹ {{ order.order_total }}</td>
               <td>
-                {% if order.status == 'Cancelled' %}
+                {% if order.status == 'Order Cancelled' %}
                 <span class="text-danger font-weight-bold">{{ order.status }}</span>
-                {% elif order.status == 'Completed' %}
+                {% elif order.status == 'Delivered Successfully' %}
                 <span class="text-success font-weight-bold">{{ order.status }}</span>
                 {% elif order.status == 'Pending' %}
                 <span class="text-muted font-weight-bold">{{ order.status }}</span>
@@ -51,7 +51,7 @@
                 {% endif %}
               </td>
               <td>
-                {% if order.status == 'Accepted' %}
+                {% if order.status == 'Order Accepted' %}
                 <a href="{% url 'admin_cancel_order' order.order_number %}" class="btn btn-danger btn-sm">Cancel</a>
                 {% elif order.status == 'Pending' %}
                 <a href="{% url 'admin_cancel_order' order.order_number %}" class="btn btn-danger btn-sm">Cancel</a>
