--- a/template/orders/success.html
+++ b/template/orders/success.html
@@ -57,9 +57,9 @@
                     <li><strong>Transaction: </strong> #{{ transaction_id }}</li>
                     <li><strong>Order Date: </strong> {{ order.created_at }}</li>
                     <li>
-                      <strong>Status:</strong> {% if order.status == 'Cancelled' %}
+                      <strong>Status:</strong> {% if order.status == 'Order Cancelled' %}
                       <span class="text-danger font-weight-bold">{{ order.status }}</span>
-                      {% elif order.status == 'Completed' %}
+                      {% elif order.status == 'Delivered Successfully' %}
                       <span class="text-success font-weight-bold">{{ order.status }}</span>
                       {% else %} <span class="text-info font-weight-bold">{{ order.status }}</span> {% endif %}
                     </li>
