--- a/template/store/store.html
+++ b/template/store/store.html
@@ -29,18 +29,18 @@
     <div class="card">
         <article class="filter-group">
             <header class="card-header">
-                <a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="">
+                <a href="#" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" class="text-info">
                     <i class="icon-control fa fa-chevron-down"></i>
-                    <h6 class="title">Categories</h6>
+                    <h6 class="title text-info">Categories</h6>
                 </a>
             </header>
             <div class="filter-content collapse show" id="collapse_1" >
                 <div class="card-body">
                     
                     <ul class="list-menu">
-                        <li><a href="{% url 'store' %}">All Products </a></li>
+                        <li><a href="{% url 'store' %}" class="text-info">All Products </a></li>
                         {% for category in links %}
-                    <li><a href="{{ category.get_url }}">{{ category.category_name}} </a></li>
+                    <li><a href="{{ category.get_url }}" class="text-info">{{ category.category_name}} </a></li>
                         {% endfor %}
                     </ul>
     
@@ -116,7 +116,7 @@
                         </select> -->
                     </div>
                     </div> <!-- form-row.// -->
-                    <button class="btn btn-block btn-primary">Apply</button>
+                    <button class="btn btn-block btn-info">Apply</button>
                 </div><!-- card-body.// -->
             </div>
         </article> <!-- filter-group .// -->
@@ -148,12 +148,12 @@
                     </div> <!-- img-wrap.// -->
                     <figcaption class="info-wrap">
                         <div class="fix-height">
-                            <a href="{{ product.get_url }}" class="title">{{ product.product_name}}</a>
+                            <a href="{{ product.get_url }}" class="title text-info">{{ product.product_name}}</a>
                             <div class="price-wrap mt-2">
-                                <span class="price">${{ product.price }}</span>
+                                <span class="price">₹{{ product.price }}</span>
                             </div> <!-- price-wrap.// -->
                         </div>
-                        <a href="{{ product.get_url }}" class="btn btn-block btn-success">View details </a>
+                        <a href="{{ product.get_url }}" class="btn btn-block btn-info">View details </a>
                     </figcaption>
                 </figure>
             </div> <!-- col.// -->
