--- a/template/base.html
+++ b/template/base.html
@@ -54,6 +54,63 @@ $(document).ready(function() {
 }); 
 // jquery end
 </script>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@600&display=swap');
+   
+  .a{
+    font-family: 'Baloo Da 2', cursive;
+    font-size:55px;
+  }
+  .list-group-item.active{
+    background-color:black;
+    border-color:black;
+  }
+  a{
+    color:black;
+  }
+        /* Hide radio buttons */
+
+  .rate > input{
+      display: none;
+  }
+
+  .rate{
+      display: inline-block;
+      border: 0;
+  }
+  .rate > label{
+      float: right;
+  }
+
+  /* Showing the stars */
+  .rate > label:before{
+      display: inline-block;
+      font-size: 1.1rem;
+      font-family: FontAwesome;
+      content: "\f005";
+      margin:0;
+      padding:0.3rem .2rem;
+      cursor: pointer;
+  }
+
+  /* Half stars */
+  .rate .half:before{
+      content: "\f089";
+      position: absolute;
+      padding-right: 0;
+  }
+
+  /* click and hover */
+  input:checked ~ label, label:hover ~ label{
+      color: #d8bb18
+  }
+
+  /* hover higlight */
+  input:checked + label:hover, input:checked ~ label:hover,input:checked ~ label:hover ~ label,
+  label:hover ~ input:checked ~ label{
+      color : #cc9000
+  }
+  </style>
 
 </head>
 <body>
