--- a/template/includes/footer.html
+++ b/template/includes/footer.html
@@ -3,7 +3,7 @@
 <footer class="section-footer border-top">
 	<div class="container">
 		<section class="footer-bottom border-top row">
-			<div class="col-md-2">
+			<!-- <div class="col-md-2">
 				<p class="text-muted"> &copy 2022 Zeit Watch </p>
 			</div>
 			<div class="col-md-8 text-md-center">
@@ -15,8 +15,131 @@
 				<i class="fab fa-lg fa-cc-visa"></i>
 				<i class="fab fa-lg fa-cc-paypal"></i>
 				<i class="fab fa-lg fa-cc-mastercard"></i>
-			</div>
+			</div> -->
 		</section>
 	</div><!-- //container -->
 </footer>
 <!-- ========================= FOOTER END // ========================= -->
+
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-white text-muted">
+	<!-- Section: Social media -->
+	<!-- <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"> -->
+	  <!-- Left -->
+	  <!-- <div class="me-5 d-none d-lg-block"> -->
+		<!-- <span>Get connected with us on social networks:</span> -->
+	  <!-- </div> -->
+	  <!-- Left -->
+  
+	  <!-- Right -->
+	  <!-- <div> -->
+		<!-- <a href="" class="me-4 text-reset">
+		  <i class="fab fa-lg fa-cc-visa"></i>
+		</a>
+		<a href="" class="me-4 text-reset">
+		  <i class="fab fa-lg fa-cc-paypal"></i>
+		</a>
+		<a href="" class="me-4 text-reset">
+		  <i class="fab fa-lg fa-cc-mastercard"></i>
+		</a> -->
+		<!-- <a href="" class="me-4 text-reset">
+		  <i class="fab fa-instagram"></i>
+		</a>
+		<a href="" class="me-4 text-reset">
+		  <i class="fab fa-linkedin"></i>
+		</a>
+		<a href="" class="me-4 text-reset">
+		  <i class="fab fa-github"></i>
+		</a> -->
+	  <!-- </div> -->
+	  <!-- Right -->
+	<!-- </section> -->
+	<!-- Section: Social media -->
+  
+	<!-- Section: Links  -->
+	<section class="">
+	  <div class="container text-center text-md-start mt-5">
+		<!-- Grid row -->
+		<div class="row mt-3">
+		  <!-- Grid column -->
+		  <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+			<!-- Content -->
+			<a href="{% url 'home' %}" class="brand-wrap">
+				<img class="logo img-fluid" src="{% static './images/ZEIT.png' %}">
+			</a>
+			<p>
+			  Purchase your own choice with Zeit Watches. Make your
+			  time better and utlize it.
+			</p>
+		  </div>
+		  <!-- Grid column -->
+  
+		  <!-- Grid column -->
+		  <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4"> -->
+			<!-- Links -->
+			<!-- <h6 class="text-uppercase fw-bold mb-4">
+			  Products
+			</h6>
+			<p>
+			  <a href="#!" class="text-reset">Angular</a>
+			</p>
+			<p>
+			  <a href="#!" class="text-reset">React</a>
+			</p>
+			<p>
+			  <a href="#!" class="text-reset">Vue</a>
+			</p>
+			<p>
+			  <a href="#!" class="text-reset">Laravel</a>
+			</p>
+		  </div> -->
+		  <!-- Grid column -->
+  
+		  <!-- Grid column -->
+		  <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+			<!-- Links -->
+			<h6 class="text-uppercase fw-bold mb-4">
+
+			</h6>
+			<p>
+			  <a href="{% url 'home' %}" class="text-reset">Home</a>
+			</p>
+			<p>
+			  <a href="{% url 'store' %}" class="text-reset">Store</a>
+			</p>
+			<!-- <p>
+			  <a href="#!" class="text-reset">Orders</a>
+			</p>
+			<p>
+			  <a href="#!" class="text-reset">Help</a>
+			</p> -->
+		  </div>
+		  <!-- Grid column -->
+  
+		  <!-- Grid column -->
+		  <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+			<!-- Links -->
+			<h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+			<p><i class="fas fa-home me-3"></i> Kozhikode, Kerala 10012, IND</p>
+			<p>
+			  <i class="fas fa-envelope me-3"></i>
+			  support@zeitwatches.com
+			</p>
+			<p><i class="fas fa-phone me-3"></i> + 91 8086030627</p>
+			<!-- <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p> -->
+		  </div>
+		  <!-- Grid column -->
+		</div>
+		<!-- Grid row -->
+	  </div>
+	</section>
+	<!-- Section: Links  -->
+  
+	<!-- Copyright -->
+	<div class="text-center p-4" style="background-color: rgba(243, 243, 243, 0.05);">
+	  © 2022 Copyright:
+	  <a class="text-reset fw-bold" href="{% url 'home' %}">Zeit Watches</a>
+	</div>
+	<!-- Copyright -->
+  </footer>
+  <!-- Footer -->
