--- a/template/store/cart.html
+++ b/template/store/cart.html
@@ -68,7 +68,7 @@
 							<div class="input-group-append">
 								<form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
 									{% csrf_token %}
-									{% for item in cart_item.variation.all %}
+									{% for item in cart_item.variations.all %}
 										<input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
 									{% endfor %}
 									<button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
