--- a/template/store/checkout.html
+++ b/template/store/checkout.html
@@ -28,39 +28,39 @@
             <div class="form-now">
                 <div class="col form-group">
                     <label for="">First Name</label>
-                    <input type="text" name="first_name" class="form-control" required>
+                    <input type="text" name="first_name" class="form-control" value="{{ request.user.first_name }}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Last Name</label>
-                    <input type="text" name="last_name" class="form-control" required>
+                    <input type="text" name="last_name" class="form-control" value="{{ request.user.last_name }}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Email</label>
-                    <input type="email" name="email" class="form-control" required>
+                    <input type="email" name="email" class="form-control" value="{{ request.user.email }}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Phone number</label>
-                    <input type="text" name="phone" class="form-control" required>
+                    <input type="text" name="phone" class="form-control" value="{{ request.user.phone_number }}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Address Line 1</label>
-                    <input type="text" name="address_line_1" class="form-control" required>
+                    <input type="text" name="address_line_1" class="form-control" value="{{ requet.user.address_line_1}}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Address Line 2</label>
-                    <input type="text" name="address_line_2" class="form-control">
+                    <input type="text" name="address_line_2" class="form-control" value="{{request.user.address_line_2}}">
                 </div>
                 <div class="col form-group">
                     <label for="">City</label>
-                    <input type="text" name="city" class="form-control" required>
+                    <input type="text" name="city" class="form-control" value="{{ userprofile.city }}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">State</label>
-                    <input type="text" name="state" class="form-control" required>
+                    <input type="text" name="state" class="form-control" value="{{ userprofile.state }}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Country</label>
-                    <input type="text" name="country" class="form-control" required>
+                    <input type="text" name="country" class="form-control" value="{{ userprofile.country }}" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Pincode</label>
@@ -99,7 +99,7 @@
                             <figcaption class="info">
                                 <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
                                 <p class="text-muted small">
-                                    {% if cart_item.variation.all %}
+                                    {% if cart_item.variations.all %}
                                         {% for item in cart_item.variations.all %}
                                             {{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
                                         {% endfor %}
